--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,12 +10,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.userdetail.UserDetailActivity"></activity>
+        <activity
+            android:name=".ui.userdetail.UserDetailActivity"
+            android:theme="@style/StatusbarVisiable" />
         <activity
             android:name=".ui.account.AccountActivity"
             android:theme="@style/StatusbarVisiable" />
         <activity
-            android:name=".ui.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:theme="@style/StatusbarVisiable" />
         <activity
             android:name=".ui.main.MainActivity"
